--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             display: flex;
             align-items: center;
             margin-bottom: 10px;
-            padding-right: 20px; /* Right padding to ensure space for button */
+            padding: 0 10px; /* Add padding to prevent text from sticking to the edges */
         }
         .todo-item span {
             flex-grow: 1;
@@ -79,3 +79,4 @@
 </body>
 
 </html>
+
