--- a/index.html
+++ b/index.html
@@ -6,20 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Todo List</title>
     <script src="https://unpkg.com/vue@3/dist/vue.global.prod.js"></script>
-    <style>
-        .todo-item {
-            display: flex;
-            align-items: center;
-            margin-bottom: 10px;
-            padding: 0 10px; /* Add padding to prevent text from sticking to the edges */
-        }
-        .todo-item span {
-            flex-grow: 1;
-        }
-        .remove-button {
-            margin-left: 10px; /* Space between text and button */
-        }
-    </style>
+
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@IshiiStpete" />
     <meta name="twitter:title" content="simple todo list">
@@ -32,10 +19,10 @@
         <textarea v-model="newTodos" placeholder="Enter multiple todos, each on a new line"></textarea>
         <button @click="addTodos">Add Todos</button>
         <ul>
-            <li v-for="(todo, index) in todos" :key="index" class="todo-item">
+            <li v-for="(todo, index) in todos" :key="index">
                 <input type="checkbox" v-model="todo.done" />
                 <span :style="{ textDecoration: todo.done ? 'line-through' : 'none' }">{{ todo.text }}</span>
-                <button @click="removeTodo(index)" class="remove-button">Remove</button>
+                <button @click="removeTodo(index)">Remove</button>
             </li>
         </ul>
     </div>
@@ -79,4 +66,5 @@
 </body>
 
 </html>
+
 
