--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <h1>Todo List</h1>
         <textarea v-model="newTodos" placeholder="Enter multiple todos, each on a new line"></textarea>
         <button @click="addTodos">Add Todos</button>
+        <button @click="saveToFile">Save to File</button>
         <ul>
             <li v-for="(todo, index) in todos" :key="index">
                 <input type="checkbox" v-model="todo.done" />
@@ -59,6 +60,20 @@
                 },
                 removeTodo(index) {
                     this.todos.splice(index, 1);
+                },
+                saveToFile() {
+                    const todosText = this.todos.map(todo => `${todo.text}${todo.done ? ' (done)' : ''}`).join('\n');
+                    const blob = new Blob([todosText], { type: 'text/plain' });
+                    const url = URL.createObjectURL(blob);
+                    const timestamp = new Date().toISOString().replace(/[:.]/g, '-'); // 時刻を含むファイル名を生成
+                    const filename = `todos-${timestamp}.txt`;
+                    const a = document.createElement('a');
+                    a.href = url;
+                    a.download = filename;
+                    document.body.appendChild(a);
+                    a.click();
+                    document.body.removeChild(a);
+                    URL.revokeObjectURL(url);
                 }
             }
         });
@@ -67,5 +82,6 @@
 </body>
 
 </html>
+
 
 
